--- a/home.css
+++ b/home.css
@@ -61,16 +61,43 @@ footer>p {
     width: 100%;
     margin: 0;
 }
-
 .login-field>input, .login-field>p {
     display: block;
     width: 230px;
 }
-
 .login-field>p {
     text-align: center;
     font-weight: bold;
     color: Crimson;
+    margin: 0;
+}
+
+.file-field {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+      top: calc(25% - 10px);
+      left: calc(25% - 10px);
+      margin-top: -25%;
+      margin-left: -25%;
+      width: 50%;
+      height: 50%;
+    border: 5px dashed;
+    margin: 5px;
+}
+.file-field>input {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+    margin: 0;
+}
+.file-field>p {
+    text-align: center;
+    margin: 0;
 }
 
 @keyframes fadein {
