--- a/home.css
+++ b/home.css
@@ -7,37 +7,35 @@ header {
     float: left;
     width: calc(100% - 230px);
     height: 50px;
-    border-bottom: solid 1px;
 }
 
 header>a {
+    display: block;
     line-height: 50px;
-    margin: 0;
-    margin-left: 15px;
-    margin-right: 15px;
-    white-space: nowrap;
+    margin: 0 15px 0 15px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 nav {
     float: right;
     width: 230px;
     height: 50px;
-    border-bottom: solid 1px;
 }
 
 nav>a {
     line-height: 50px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin: 0 15px 0 15px;
     font-weight: bold;
 }
 
 main {
     width: 100%;
-    height: calc(100% - 77px);
-    border-bottom: solid 1px;
+    height: calc(100% - 75px);
+    box-sizing: border-box;
+    border-style: solid;
+    border-width: 1px 0 1px 0;
     clear: both;
 }
 
@@ -57,9 +55,8 @@ footer {
 }
 
 footer>p {
-    margin: 0;
-    margin-left: 10px;
-    margin-right: 10px;
+    line-height: 25px;
+    margin: 0 10px 0 10px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
